Avoid jumping popup

--- a/style/table-filters.css
+++ b/style/table-filters.css
@@ -1,5 +1,6 @@
 .table-filters-container {
   padding: 8px;
+  min-width: 520px;
 }
 
 .table-filters-menu {
